// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateTime /> on different times of the day renders a date and time information for 0 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T00:00:00"
  title="Mittwoch, der 12. Februar 2020 um 00:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      00:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachts am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 1 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T01:00:00"
  title="Mittwoch, der 12. Februar 2020 um 01:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      01:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(30 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachts am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 2 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T02:00:00"
  title="Mittwoch, der 12. Februar 2020 um 02:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      02:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(60 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachts am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 3 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T03:00:00"
  title="Mittwoch, der 12. Februar 2020 um 03:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      03:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(90 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachts am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 4 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T04:00:00"
  title="Mittwoch, der 12. Februar 2020 um 04:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      04:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(120 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Verdammt früh am Morgen des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 5 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T05:00:00"
  title="Mittwoch, der 12. Februar 2020 um 05:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      05:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(150 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Verdammt früh am Morgen des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 6 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T06:00:00"
  title="Mittwoch, der 12. Februar 2020 um 06:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      06:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(180 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Verdammt früh am Morgen des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 7 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T07:00:00"
  title="Mittwoch, der 12. Februar 2020 um 07:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      07:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(210 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Morgens am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 8 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T08:00:00"
  title="Mittwoch, der 12. Februar 2020 um 08:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      08:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(240 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Morgens am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 9 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T09:00:00"
  title="Mittwoch, der 12. Februar 2020 um 09:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      09:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(270 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Morgens am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 10 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T10:00:00"
  title="Mittwoch, der 12. Februar 2020 um 10:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      10:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(300 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Am frühen Vormittag des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 11 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T11:00:00"
  title="Mittwoch, der 12. Februar 2020 um 11:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      11:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(330 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Vormittags am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 12 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T12:00:00"
  title="Mittwoch, der 12. Februar 2020 um 12:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      12:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(360 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Zur Mittagszeit am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 13 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T13:00:00"
  title="Mittwoch, der 12. Februar 2020 um 13:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      13:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(390 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Zur Mittagszeit am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 14 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T14:00:00"
  title="Mittwoch, der 12. Februar 2020 um 14:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      14:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(420 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Am frühen Nachmittag des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 15 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T15:00:00"
  title="Mittwoch, der 12. Februar 2020 um 15:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      15:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(450 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachmittags am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 16 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T16:00:00"
  title="Mittwoch, der 12. Februar 2020 um 16:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      16:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(480 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Nachmittags am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 17 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T17:00:00"
  title="Mittwoch, der 12. Februar 2020 um 17:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      17:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(510 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Am späten Nachmittag des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 18 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T18:00:00"
  title="Mittwoch, der 12. Februar 2020 um 18:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      18:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(540 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Am frühen Abend des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 19 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T19:00:00"
  title="Mittwoch, der 12. Februar 2020 um 19:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      19:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(570 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Am frühen Abend des
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 20 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T20:00:00"
  title="Mittwoch, der 12. Februar 2020 um 20:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      20:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(600 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Abends am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 21 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T21:00:00"
  title="Mittwoch, der 12. Februar 2020 um 21:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      21:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(630 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Abends am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 22 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T22:00:00"
  title="Mittwoch, der 12. Februar 2020 um 22:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      22:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(660 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Spätabends am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> on different times of the day renders a date and time information for 23 o’clock 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="2020-02-12T23:00:00"
  title="Mittwoch, der 12. Februar 2020 um 23:00 Uhr GMT+1"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      23:00
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(690 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(0 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Kurz vor Mitternacht am
   
  12. Februar 2020
</time>
`;

exports[`<DateTime /> renders a date and time information 1`] = `
.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto, Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.5;
  color: dimgrey;
  white-space: nowrap;
}

.c1 {
  margin-right: 0.75ex;
  width: 1em;
  height: 1em;
  vertical-align: -2px;
  fill: currentColor;
}

<time
  class="c0"
  datetime="1999-04-17T22:11:18"
  title="Samstag, der 17. April 1999 um 22:11 Uhr GMT+2"
>
  <svg
    aria-hidden="true"
    class="c1"
    height="12"
    viewBox="0 0 12 12"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      22:11
       Uhr
    </title>
    <circle
      cx="6"
      cy="6"
      fill="none"
      r="5.425"
      stroke="currentColor"
      stroke-width="1.15"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(660 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="4"
    />
    <line
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="1.35"
      transform="rotate(66 6 6)"
      x1="6"
      x2="6"
      y1="6"
      y2="2.5"
    />
  </svg>
  Spätabends am
   
  17. April 1999
</time>
`;
